--- a/index.html
+++ b/index.html
@@ -358,7 +358,7 @@
   <div id="notification">Address and transactions copied to clipboard/console</div>
   <div id="container">
     <div id="input-container">
-      <a href="https://github.com/xtzchads/eye.xtzchad.xyz" class="icon-link" target="_blank">
+      <a href="https://github.com/xtzchads/eye.tez.cool" class="icon-link" target="_blank">
         <img src="icons/Tezos-social-icon-black-04.png" alt="Tezos Icon" />
       </a>
 	  <br>
