--- a/index.html
+++ b/index.html
@@ -384,8 +384,10 @@
       </a>
 	  <br>
       <h1>The Eye of Chad</h1>
-      <div class="button-container">
+            <div class="button-container">
+        <button id="back-button" class="nav-button" alt="Back"><img src="icons/back.png" alt="Back"></button>
         <input type="text" id="target-address" placeholder="Search or paste address">
+        <button id="forward-button" class="nav-button" alt="Forward"><img src="icons/forward.png" alt="Forward"></button>
       </div>
             
       <div class="slider-container">
