--- a/frame.html
+++ b/frame.html
@@ -319,7 +319,7 @@
     /* Responsive design */
     @media (max-width: 768px) {
       #container {
-        padding: 20px 15px;
+        padding-top:100px;
       }
 
       #input-container {
