--- a/frame.html
+++ b/frame.html
@@ -256,6 +256,12 @@
     margin-top: 20px;
     box-sizing: border-box;
     display: none;
+    border-radius: var(--border-radius);
+    box-shadow: var(--card-shadow);
+    animation: fadeInDown 0.8s ease forwards;
+    border-radius: var(--border-radius-md);
+    border: 1px solid var(--glass-border);
+    backdrop-filter: blur(2px);
 }
 
     .loader {
