--- a/frame.html
+++ b/frame.html
@@ -254,6 +254,7 @@
     width: 100%;
     max-width: 100%;
     margin-top: 20px;
+	    margin-bottom:20px;
     box-sizing: border-box;
     display: none;
     border-radius: var(--border-radius);
