--- a/frame.html
+++ b/frame.html
@@ -359,7 +359,9 @@
         width: 100%;
         padding: 20px 15px;
       }
-      
+      #container {
+        padding-top:130px;
+      }
       h1 {
         font-size: 1.5rem;
       }
