--- a/frame.html
+++ b/frame.html
@@ -159,14 +159,13 @@
     }
 
     .nav-button {
-          display: flex
-;
+          display: flex;
     width: 44px;
     height: 44px;
     align-items: center;
     justify-content: center;
     gap: 10px;
-    padding: 16px 53px;
+    padding: 27px 16px;
     position: relative;
     border-radius: 16px;
     border: none;
