--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
     margin: 0;
     font-family: Monda, Helvetica;
     overflow-x: hidden;
+	    background: radial-gradient(50% 50% at 65% 50%, rgba(36, 26, 76, 1) 0%, rgba(9, 3, 28, 1) 100%);
 }
 
 
