--- a/index.html
+++ b/index.html
@@ -196,15 +196,17 @@
       margin-bottom: 0;
     }
 
-    input[type="range"] {
-      width: 100%;
-      height: 6px;
-      background: linear-gradient(180deg, rgba(162, 124, 238, 1) 0%, rgba(127, 75, 231, 1) 100%);
-      border-radius: 3px;
-      appearance: none;
-      outline: none;
-      margin-bottom: 8px;
-    }
+input[type="range"] {
+  width: 100%;
+  height: 6px;
+  background: linear-gradient(0deg, rgba(24, 17, 44, 0.64) 0%, rgba(24, 17, 44, 0.64) 100%);
+  border-radius: 3px;
+  appearance: none;
+  outline: none;
+  margin-bottom: 8px;
+  box-shadow: inset 0px 4px 20px #0c0624a8;
+}
+
 
     input[type="range"]::-webkit-slider-thumb {
       appearance: none;
